src/test/ui/impl-trait/issues/issue-84919.stderr
error[E0562]: `impl Trait` not allowed outside of function and method return types
  --> $DIR/issue-84919.rs:5:13
   |
LL |     let _x: impl Trait = ();
   |             ^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0562`.
